Change basic app to SQLite that deletes notes Everything works.

--- a/SqliteNote/SqliteNote/Views/ItemDetailPage.xaml
+++ b/SqliteNote/SqliteNote/Views/ItemDetailPage.xaml
@@ -6,9 +6,11 @@
 
     <StackLayout Spacing="20" Padding="15">
         <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Text}" FontSize="Small"/>
+        <Label Text="{Binding Text}" FontSize="Large" TextColor="DarkBlue" />
+        <Label Text="Date:" FontSize="Medium" />
+        <Label Text="{Binding Date, StringFormat='{0:d}'}" FontSize="Large" TextColor="DarkMagenta" />
         <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Description}" FontSize="Small"/>
+        <Label Text="{Binding Description}" FontSize="Large" TextColor="DarkBlue" />
     </StackLayout>
     
 </ContentPage>
