--- a/SqliteNote/SqliteNote/Views/NewItemPage.xaml
+++ b/SqliteNote/SqliteNote/Views/NewItemPage.xaml
@@ -10,6 +10,8 @@
         <StackLayout Spacing="3" Padding="15">
             <Label Text="Text" FontSize="Medium" />
             <Entry Text="{Binding Text, Mode=TwoWay}" FontSize="Medium" />
+            <Label Text="Date" FontSize="Medium" />
+            <DatePicker Date="{Binding Date, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Description" FontSize="Medium" />
             <Editor Text="{Binding Description, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
             <StackLayout Orientation="Horizontal">
