--- a/SqliteNote/SqliteNote/Views/ItemDetailPage.xaml
+++ b/SqliteNote/SqliteNote/Views/ItemDetailPage.xaml
@@ -1,16 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels="clr-namespace:SqliteNote.ViewModels" x:DataType="viewmodels:ItemDetailViewModel"
              x:Class="SqliteNote.Views.ItemDetailPage"
              Title="{Binding Title}">
 
     <StackLayout Spacing="20" Padding="15">
+        <Label Text="Id:" FontSize="Medium" />
+        <Label Text="{Binding Id}" FontSize="Large" TextColor="DarkBlue" />
         <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Text}" FontSize="Large" TextColor="DarkBlue" />
+        <Entry Text="{Binding Text}" FontSize="Large" TextColor="DarkBlue" />
         <Label Text="Date:" FontSize="Medium" />
-        <Label Text="{Binding Date, StringFormat='{0:d}'}" FontSize="Large" TextColor="DarkMagenta" />
+        <DatePicker Date="{Binding Date, StringFormat='{0:d}'}" FontSize="Large" TextColor="DarkMagenta" />
         <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Description}" FontSize="Large" TextColor="DarkBlue" />
+        <Entry Text="{Binding Description}" FontSize="Large" TextColor="DarkBlue" />
+        <StackLayout Orientation="Horizontal">
+            <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
+            <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
+        </StackLayout>
     </StackLayout>
     
 </ContentPage>
