--- a/SqliteNote/SqliteNote/Views/ItemsPage.xaml
+++ b/SqliteNote/SqliteNote/Views/ItemsPage.xaml
@@ -14,9 +14,9 @@
       x:DataType enables compiled bindings for better performance and compile time validation of binding expressions.
       https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/data-binding/compiled-bindings
     -->
-
-   
-    <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+    <StackLayout>
+        <SearchBar x:Name="SearchBarControl" Text="" Placeholder="Search Text" PlaceholderColor="LightBlue" FontSize="Large" FontAttributes="Bold" TextChanged="SearchBarControl_TextChanged" />
+        <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Items}"
                 SelectionMode="None">
@@ -26,14 +26,13 @@
                         <SwipeView.RightItems>
                             <SwipeItem Text="Delete" BackgroundColor="Red" Invoked="SwipeItem_Invoked" />
                         </SwipeView.RightItems>
-                        <StackLayout Padding="10" x:DataType="model:Item" BackgroundColor="LightBlue">
-                            <SearchBar x:Name="SearchBarControl" Text="" Placeholder="Search Text" PlaceholderColor="LightBlue" FontSize="Large" FontAttributes="Bold" TextChanged="SearchBarControl_TextChanged" />
-                            <Label Text="{Binding Text}" TextColor="Red"
+                            <StackLayout Padding="10" x:DataType="model:Item" BackgroundColor="LightBlue">
+                                <Label Text="{Binding Text}" TextColor="Red"
                             LineBreakMode="NoWrap" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="16"
                                    FontAttributes="Bold"/>
-                                <Label Text="{Binding Date, StringFormat='{0:d}'}" TextColor="Blue"
+                            <Label Text="{Binding Date, StringFormat='{0:d}'}" TextColor="Blue"
                             LineBreakMode="NoWrap" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="16"
@@ -55,5 +54,6 @@
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-    </RefreshView>
+        </RefreshView>
+    </StackLayout>
 </ContentPage>
